crates/parser/tests/fixtures/bad/undeclared_loop_condition.dl
loop until { ghost_flag } { }
